--- a/src/HTMLtemplate/index.html
+++ b/src/HTMLtemplate/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>METE DESIGN组件单元开发页</title>
+    <style>
+    *{
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        /*color: rgba(0,0,0,0.65)*/
+    }
+    </style>
 </head>
 <body> 
     <div id="root"></div>
