--- a/example/index.html
+++ b/example/index.html
@@ -17,7 +17,10 @@
     </style>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+        <h1>aaaa</h1>
+    </div>
     <script src="js/index.js"></script>
+    <script type="text/javascript" src="js/tt.js"></script>
   </body>
 </html>
