--- a/example/index.html
+++ b/example/index.html
@@ -21,6 +21,6 @@
         <h1>aaaa</h1>
     </div>
     <script src="js/index.js"></script>
-    <script type="text/javascript" src="js/tt.js"></script>
+    <script type="text/javascript" src="tt.js"></script>
   </body>
 </html>
