--- a/src/HTMLtemplate/index.html
+++ b/src/HTMLtemplate/index.html
@@ -9,7 +9,10 @@
     *{
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif;
         /*color: rgba(0,0,0,0.65)*/
-        padding: 0;margin: 0
+        padding: 0;margin: 0;box-sizing: border-box;
+    }
+    *::after{
+        content: '';box-sizing: border-box
     }
     </style>
 </head>
